--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -15,7 +15,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: Build and Publish the Docker image
       run: |
-        docker build . --file Dockerfile --tag minibox:$(date +%s)
+        docker build . --file Dockerfile --tag foundeo/minibox:$(date +%s)
         docker-compose build
         docker-compose up
         docker login --username ${{ secrets.DOCKER_USER }} --password ${{ secrets.DOCKER_PASS }}
