--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -15,9 +15,10 @@ jobs:
     - uses: actions/checkout@v2
     - name: Build and Publish the Docker image
       run: |
-        docker build . --file Dockerfile --tag foundeo/minibox:$(date +%s)
+        docker build . --file Dockerfile --tag minibox
         docker-compose build
         docker-compose up
         docker login --username ${{ secrets.DOCKER_USER }} --password ${{ secrets.DOCKER_PASS }}
+        docker tag minibox foundeo/minibox:latest
         docker push foundeo/minibox:latest
         
