Update CommandBox to version 5.4.0

--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -17,13 +17,14 @@ jobs:
     - uses: actions/checkout@v2
     - name: Build and Publish the Docker image
       run: |
+        date_version=$(date +%Y.%m)
+        echo $date_version > ./version.txt
         docker build . --file Dockerfile --tag minibox
         docker-compose build
         docker-compose up
         echo "${{ secrets.DOCKER_PASS }}" | docker login --username ${{ secrets.DOCKER_USER }} --password-stdin
         docker tag minibox foundeo/minibox:latest
         docker push foundeo/minibox:latest
-        date_version=$(date +%Y.%m)
         docker tag minibox foundeo/minibox:$date_version
         docker push foundeo/minibox:$date_version
         docker logout
